2001-12-23  Bruce Johnson  <bruce_johnson@merck.com>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (getInputTranslation,
	setInputTranslation, getOutputTranslation, setOutputTranslation):
	Add new input and output translations fields and accessors.
	These fields are not actually used yet.
	* src/jacl/tcl/lang/FconfigureCmd.java (cmdProc): Implement
	the -translation option for the fconfigure command.
	* src/jacl/tcl/lang/TclIO.java (getTranslationString,
	getTranslationID): Add new methods and fields to support
	the -translation option for fconfigure.

2001-12-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (getMode, isReadOnly,
	isWriteOnly, isReadWrite): Add new methods to check mode
	status without having to deal with TclIO flags directly.
  	Use these new methods throughout the class. Remove
	the getMode method.
	* src/jacl/tcl/lang/FileChannel.java: Rename input
	parameter mode to inmode to avoid possible confusion
	with inherited mode field.

2001-11-27  Bruce Johnson  <bruce_johnson@merck.com>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (buffering, getBuffering,
	setBuffering, BUF_SIZE, bufferSize, getBufferSize,
	setBufferSize, encoding, getEncoding, setEncoding): Add
	new members and get/set methods.
	* src/jacl/tcl/lang/FconfigureCmd.java (cmdProc):
	Get and set channel values for -buffering, -buffersize,
	and -encoding options.
	* src/jacl/tcl/lang/TclIO.java (BUFF_FULL, BUFF_LINE,
	BUFF_NONE): Add new fields for use in Channel code.

2001-11-27  Bruce Johnson  <bruce_johnson@merck.com>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (blocking, getBlocking,
	setBlocking): Add new blocking state.
	* src/jacl/tcl/lang/FconfigureCmd.java (cmdProc): Indent
	to 4 space Tcl style. Add -blocking channel option.
	Remove the "fconfigure command not implemented yet" error.
